force-app/main/default/objects/Global_Settings__c/Global_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This setting is used to define application settings that can be overridden for specific users or profiles. E.g. Disable Triggers</description>
    <label>Global Settings</label>
</CustomObject>