force-app/main/default/objects/Global_Settings__c/fields/AllowedEditWithoutVer__c.field-meta.xml
<CustomField>
    <fullName>AllowedEditWithoutVer__c</fullName>
    <description>Used in conjunction with the PT Trigger to determine field value changes that result in a version snapshot being created, when an external user edits a field in this list.</description>
    <inlineHelpText>Comma separated list of field API names.</inlineHelpText>
    <label>AllowedEditWithoutVer</label>
    <type>TextArea</type>
</CustomField>