force-app/main/default/objects/Global_Settings__c/fields/AllowedEditWithVersioning__c.field-meta.xml
<CustomField>
    <fullName>AllowedEditWithVersioning__c</fullName>
    <description>Used in conjunction with the PT Trigger to determine field value changes that are allowed, but do not result in a version snapshot being created, when an external user edits a field in this list.</description>
    <inlineHelpText>Comma separated list of field API names.</inlineHelpText>
    <label>AllowedEditWithVersioning</label>
    <type>TextArea</type>
</CustomField>