force-app/main/default/objects/Global_Settings__c/fields/Can_Edit_Closed_Programs2__c.field-meta.xml
<CustomField>
    <fullName>Can_Edit_Closed_Programs2__c</fullName>
    <defaultValue>&quot;System Administrator, Admin Read-Only, State Admin - State user, Approver - State User, ODJFS FCC Approver - State User, ODE Lic and SUTQ Reviewer - State User, ODJFS FCC Reviewer - County Role, ODJFS FCC Approver - County Role&quot;</defaultValue>
    <description>Since the text area only has 255 chars, we needed to field to hold the list of profile names.</description>
    <inlineHelpText>Comma separated list of Profile names.</inlineHelpText>
    <label>Can Edit Closed Programs2</label>
    <type>TextArea</type>
</CustomField>