force-app/main/default/objects/Global_Settings__c/fields/Can_Edit_Closed_Programs__c.field-meta.xml
<CustomField>
    <fullName>Can_Edit_Closed_Programs__c</fullName>
    <defaultValue>&quot;, System Administrator, Admin Read-Only&quot;</defaultValue>
    <description>These Profile Names are allowed to edit programs that are closed.</description>
    <inlineHelpText>Comma separated list of Profile names.</inlineHelpText>
    <label>Can Edit Closed Programs</label>
    <type>TextArea</type>
</CustomField>