force-app/main/default/objects/Global_Settings__c/fields/CLQ_Case_Action_Detail_Caseid_Field__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Case_Action_Detail_Caseid_Field__c</fullName>
    <label>Case Action Detail Caseid Field</label>
    <length>25</length>
    <type>Text</type>
</CustomField>