force-app/main/default/objects/Global_Settings__c/fields/JFS_South_Central__c.field-meta.xml
<CustomField>
    <fullName>JFS_South_Central__c</fullName>
    <defaultValue>&quot;HOCKING,ROSS,VINTON&quot;</defaultValue>
    <label>JFS South Central</label>
    <type>TextArea</type>
</CustomField>