force-app/main/default/objects/Global_Settings__c/fields/NOCAC__c.field-meta.xml
<CustomField>
    <fullName>NOCAC__c</fullName>
    <defaultValue>&quot;AUGLAIZE,DEFIANCE,FULTON,HANCOCK,HARDIN,PAULDING,VAN WERT,WILLIAMS&quot;</defaultValue>
    <label>NOCAC</label>
    <type>TextArea</type>
</CustomField>