force-app/main/default/objects/Global_Settings__c/fields/RunTriggerAsPortal__c.field-meta.xml
<CustomField>
    <fullName>RunTriggerAsPortal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This value is a workaround to be able to run certain triggers as the external user  until the Portal development is complete enough to test the functionality.</description>
    <label>RunTriggerAsPortal</label>
    <type>Checkbox</type>
</CustomField>